fix contrast footer

--- a/style.css
+++ b/style.css
@@ -771,6 +771,10 @@ h4 {
     text-decoration: underline!important;
 }
 
+.bold-footer{
+    font-weight: 700;
+}
+
 .bgc-white {
     background-color: #FFFFFF;
 }
